# adaptix

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .travis.yml  Makefile  README.md  README2.md  astpath_lint.py  justfile  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  requirements_lint.txt  requirements_pypy.txt  requirements_test_extra_new.txt  requirements_test_extra_old.txt  requirements_tests.txt  setup.cfg  setup.py  tasks.py  tox.ini
.github/: dependabot.yml
.github/workflows/: coverage_external_pr.yml  lint_and_test.yml  setup.yml  test_all_oses.yml
_dataclass_factory/facade/: provider.py  retort.py
_dataclass_factory/provider/: __init__.py  concrete_provider.py  exceptions.py  overlay_schema.py  provider_template.py  request_filtering.py
benchmarks/: parsing.py  parsing_path.py  serializing.py  serializing_path.py  setup.py
benchmarks/benchmarks/: bench_nexus.py  nexus_utils.py
dataclass_factory/: __init__.py  asdict.py  common.py  compat.py  dataclass_utils.py  deprecated_stuff.py  dict_factory.py  exceptions.py  factory.py  feature_requirement.py  fields.py  generics.py  jsonschema.py  naming.py  optimize.py  parsers.py  path_utils.py  schema.py  schema_helpers.py  serializers.py  struct_path.py  stub.py  type_detection.py  validators.py
dataclass_factory/code_tools/: compiler.py
dataclass_factory/complex_types/: fields.py
dataclass_factory/model_tools/: definitions.py
dataclass_factory/provider/: __init__.py  concrete_provider.py  exceptions.py  generic_provider.py  overlay_schema.py  static_provider.py
dataclass_factory/retort/: base_retort.py
dataclass_factory_30/: common.py  compat.py  core.py  factory.py  feature_requirement.py  helpers.py  pipeline.py  provider.py  struct_path.py  utils.py
dataclass_factory_30/code_tools/: __init__.py  code_builder.py  compiler.py  context_namespace.py  name_allocator.py  prefix_mangler.py  utils.py
dataclass_factory_30/core/: __init__.py  class_dispatcher.py  essential.py
dataclass_factory_30/facade/: __init__.py  factory.py  provider.py  provider_factory.py  retort.py  utils.py
dataclass_factory_30/factory/: __init__.py  basic_factory.py  builtin_factory.py  facade_factory.py  factory.py  incremental_factory.py  mediator.py  operating_factory.py
dataclass_factory_30/high_level/: __init__.py  facade.py  factory.py  name_mapper.py  name_style.py  utils.py
dataclass_factory_30/low_level/: __init__.py  builtin_factory.py  definitions.py  factory.py  fields.py  incremental_factory.py  mediator.py  pipeline.py  provider.py  provider_tmpl.py  provider_utils.py  request_cls.py  static_provider.py
dataclass_factory_30/model_tools/: __init__.py  definitions.py  introspection.py
dataclass_factory_30/provider/: __init__.py  basic_provider.py  class_dispatcher.py  concrete_provider.py  default_generic_provider.py  definitions.py  errors.py  essential.py  facade.py  fields.py  fields_basics.py  fields_figure.py  fields_parser.py  generic_provider.py  name_mapper.py  name_style.py  overlay.py  overlay_schema.py  provider.py  provider_basics.py  provider_factory.py  provider_magic_rc.py  provider_template.py  request_cls.py  special_provider.py  static_provider.py
dataclass_factory_30/retort/: __init__.py  base_retort.py  basic_retort.py  mediator.py  operating_retort.py  utils.py
dataclass_factory_30/type_checker/: __init__.py
dataclass_factory_30/type_tools/: __init__.py  basic_utils.py  norm_utils.py  normalize_type.py  subtype_matcher.py  utils.py
dataclass_factory_30/utils/: __init__.py  _other.py
df_workbench/: mapping_to_list.py  mapping_to_list_map.py
docs/: Makefile  benchmarks.rst  changelog.rst  conf.py  contributing.rst  examples.rst  extended.rst  extended_usage.rst  index.rst  new_major_version.rst  overview.rst  quickstart.rst  readme_advantages.md  specific_types_behavior.rst  tutorial.rst  types.rst  why-not-pydantic.rst
docs/_static/: gurubase-widget.js
docs/changelog/: changelog_body.rst  template.rst.jinja2
docs/common/: dealing-with-if-type-checking.rst  installation.rst
docs/conversion/: extended-usage.rst  tutorial.rst
docs/custom_ext/: bench_tools.py  macros.py  utils.py
docs/examples/: collection.py  custom.py  errors.py  flatten.py  flatten_auto.py  flatten_list.py  generic.py  jsonschema.py  jsonschema_defs.json  jsonschema_res.json  name_mapping.py  name_style.py  omit_default.py  only_exc.py  polymorphic.py  pre_post.py  self_referenced.py  skip_internal.py  subclass.py  tldr.py  trailing_.py  trailing_keep.py  unknown_fields.py  validation.py  (+1 more)
examples/: basics_example.py  complex_example.py  introduction_example.py
requirements/: bench.txt  bench_pypy38.txt  dev.txt  doc.txt  lint.txt  pre.txt  runner.txt  test_extra_new.txt  test_extra_new_pypy38.txt  test_extra_none.txt  test_extra_old.txt  test_extra_old_py313.txt
scripts/: astpath_lint.py  bench_nexus.py  invoke_tasks.py
tests/: conftest.py  test_base_type_conversion.py  test_bytes_to_base_type_conversion.py  test_common_generics.py  test_custom_type_factory.py  test_cycle.py  test_dataclass_utils.py  test_dict_at_instance_check.py  test_doc.py  test_extras.py  test_fields.py  test_generic.py  test_generic_inheritance.py  test_ignore_fields_with_init_false.py  test_init.py  test_invalid_data.py  test_literal.py  test_literal_compat.py  test_meta.py  test_name_cases.py  test_namedtuple.py  test_new_factory.py  test_newtype.py  test_omit.py  test_optional.py  test_path.py  test_polymorphic.py  test_pre_post.py  test_protocol_dataclass.py  test_regex_pattern.py  test_schema_priority.py  test_serializer_base.py  test_str_to_base_type_conversion.py  test_struct_path.py  test_type_hinting_generics_in_standart_collections.py  test_typeddict.py  test_underscore.py  test_union.py  test_unknown_fields.py  test_utils.py  (+1 more)
tests_30/: helpers.py  test_helpers.py  test_name_mapper.py  test_name_style.py  test_normalize_type.py  test_singleton.py  test_struct_path.py  test_utils.py
tests_helpers/: setup.py  tests_helpers.py
(+818 files in other folders)
