[build-system]
requires = ['setuptools==69.1.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'adaptix'
version = '3.0.0b2'
description = 'An extremely flexible and configurable data model conversion library'
readme = 'README.md'
requires-python = '>=3.8'
dependencies = [
    'exceptiongroup>=1.1.3; python_version<"3.11"',
    'astunparse>=1.6.3; python_version<="3.8"',
]

classifiers = [
    'Development Status :: 3 - Alpha',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: Implementation :: CPython',
    'Programming Language :: Python :: Implementation :: PyPy',
    'Operating System :: OS Independent',
    'Intended Audience :: Developers',
    'Intended Audience :: Information Technology',
    'Intended Audience :: System Administrators',
    'License :: OSI Approved :: Apache Software License',
    'Typing :: Typed',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Internet',
]

[project.optional-dependencies]
attrs = ['attrs >= 21.3.0']
attrs-strict = ['attrs >= 21.3.0, <= 23.2.0']
sqlalchemy = ['sqlalchemy >= 2.0.0']
sqlalchemy-strict = ['sqlalchemy >= 2.0.0, <= 2.0.27']

[project.urls]
'Homepage' = 'https://github.com/reagento/adaptix'
'Bug Tracker' = 'https://github.com/reagento/adaptix/issues'
'Documentation' = 'https://adaptix.readthedocs.io/en/latest/'
'Changelog' = 'https://adaptix.readthedocs.io/en/latest/reference/changelog.html'
'Source' = 'https://github.com/reagento/adaptix/'
'Download' = 'https://github.com/reagento/adaptix/#files'

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
adaptix = ['py.typed']

[[project.authors]]
name = 'A. Tikhonov'
email = '17@itishka.org'


[tool.isort]
multi_line_output = 3
line_length = 120
include_trailing_comma = true
combine_as_imports = true
remove_redundant_aliases = true

[tool.pytest.ini_options]
python_classes = 'WeDoNotUseClassTestCase'
python_files = ['test_*.py', '*_test.py', 'bench_[!nexus]*.py', 'tests_helpers.py', 'local_helpers.py']
testpaths = ['tests', 'examples']
filterwarnings = ['ignore::adaptix.TypedDictAt38Warning']

[tool.bandit]
skips = ['B102', 'B106', 'B404', 'B603', 'B607']

[tool.bandit.assert_used]
skips = ['*/test_*.py', '*/*_test.py', 'docs/examples/*', '*/bench_*.py']

[tool.vulture]
min_confidence = 60
ignore_decorators = ['@_aspect_storage.add', '@overload', '@abstractmethod']


[tool.towncrier]
package = 'adaptix'
filename = 'docs/changelog/changelog_body.rst'
template = 'docs/changelog/template.rst.jinja2'
issue_format = '`#{issue} <https://github.com/reagento/adaptix/issues/{issue}>`_'
directory = 'docs/changelog/fragments'

type = [
  { name = "Features",         directory = "feature",     showcontent = true },
  { name = "Breaking Changes", directory = "breaking",    showcontent = true },
  { name = "Deprecations",     directory = "deprecation", showcontent = true },
  { name = "Bug Fixes",        directory = "bugfix",      showcontent = true },
  { name = "Other",            directory = "other",       showcontent = true },
]
