[metadata]
name = dataclass_factory
description = An utility class for creating instances of dataclasses
long_description = file: README.md
long_description_content_type = text/markdown

version = 3.0.0-alpha.1
url = https://github.com/tishka17/dataclass_factory
author = A. Tikhonov
author_email = 17@itishka.org
license = Apache2

classifiers =
    Operating System :: OS Independent
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3

[options]
packages = dataclass_factory
python_requires = >=3.8

[options.extras_require]
test = file: requirements_test.txt
lint = file: requirements_lint.txt

[options.package_data]
dataclass_factory =
  py.typed
